[package]
name = "warp-dir"
version = "0.1.0"
edition = "2021"

authors = ["Dan Cardin <ddcardin@gmail.com>"]
description = "A CLI tool for warping from one directory to another."
documentation = "https://github.com/DanCardin/warp-dir"
homepage = "https://github.com/DanCardin/warp-dir"
repository = "https://github.com/DanCardin/warp-dir"
readme = "README.md"
keywords = [
    "warp-dir",
    "wd",
    "cd",
    "shell",
]
categories = ["command-line-utilities"]
license = "Apache-2.0"


[[bin]]
name = "wd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive", "string", "cargo"] }
clap_complete = "4.3.2"
etcetera = "0.8.0"
indoc = "2.0.3"
itertools = "0.11.0"
once_cell = "1.18.0"
path-absolutize = "3.1.0"
shellexpand = { version = "3.1.0", default-features = false, features = ["tilde", "base-0", "path"] }
